// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error handling middleware should replace response with BaseError 1`] = `
{
  "data": null,
  "message": "Custom message",
  "ok": false,
  "status": 400,
}
`;

exports[`Error handling middleware should return a error response on Syntax 1`] = `
{
  "data": null,
  "message": "Unprocessable request",
  "ok": false,
  "status": 400,
}
`;

exports[`Error handling middleware should return a error response on URI error 1`] = `
{
  "data": null,
  "message": "Unprocessable request",
  "ok": false,
  "status": 400,
}
`;
